[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
version       = "0.4.0-rc.2"
edition       = "2021"
license       = "MPL-2.0"
homepage      = "https://apollo.farm"
repository    = "https://github.com/apollodao/liquidity-helpers"
keywords      = ["cosmwasm", "liquidity", "provision", "osmosis", "astroport"]
rust-version  = "1.64.0"

[workspace.dependencies]
cosmwasm-std      = "1.5.3"
cosmwasm-schema   = "1.4.0"
cw2               = "1.1.0"
cw20              = "1.1.0"
cw-storage-plus   = "1.1.0"
thiserror         = "1.0.45"
apollo-cw-asset   = "0.1.2"
cw-dex            = { git = "https://github.com/apollodao/cw-dex.git", rev = "835756eed2d8428aae9269ae9eba2fca41d55473" }
cw-dex-astroport  = { git = "https://github.com/apollodao/cw-dex.git", rev = "835756eed2d8428aae9269ae9eba2fca41d55473" }
cw-dex-osmosis    = { git = "https://github.com/apollodao/cw-dex.git", rev = "835756eed2d8428aae9269ae9eba2fca41d55473" }
apollo-utils      = "0.1.1"
cw-bigint         = "0.4.3"
liquidity-helper  = { version = "0.4.0-rc.2", path = "./packages/liquidity-helper" }
semver            = "1.0.20"

# Dev dependencies
cw-it = { git = "https://github.com/apollodao/cw-it.git", rev = "362c71a8f1603622ce291b2c49da093c02caeaec", features = ["astroport"]}
test-case         = "3.2.1"
proptest          = "1.4.0"
apollo-cw-multi-test = { git = "https://github.com/apollodao/cw-multi-test.git", rev = "7e7bc2b91a8199c47815b45ef23b3ab07390ae3a",features = ["stargate"] }

[profile.release]
codegen-units     = 1
debug             = false
debug-assertions  = false
incremental       = false
lto               = true
opt-level         = 3
overflow-checks   = true
rpath             = false

[build]
rustflags = ["-C", "target-feature=-sign-ext"]
